Add homepage layout and styles
Create initial homepage markup and stylesheet: index.html now includes a header with logo and navigation links, a main hero section with promotional text, social icons, an Order Now button, and a drink image (references ./image/*). An empty footer placeholder was added. style.css was added with a Google font import, global reset, and styles for the nav bar, buttons, hero text, icons, and drink image to establish the base visual layout.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Starbucks</title>
 </head>
+
 <body>
-    
-    
+    <header>
+        <div class="nav">
+            <div class="logo">
+                <img src="./image/logo.png" alt="Logo" height="65px">
+            </div>
+            <a href="" class="menu">MENU</a>
+            <a href="" class="rewards">REWARDS</a>
+            <a href="" class="get-card">GIFT CARD</a>
+            <a href="" class="signin">Sign In</a>
+            <a href="" class="join-now">Join Now</a>
+
+        </div>
+
+    </header>
+
+    <main>
+        <div class="text">
+            <p>SUPER DRINK</p>
+            <h1>Meet our new</h1>
+            <h1>Summer CoffeeDrinks</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit a magnam, esse ipsa numquam, dicta
+                asperiores quae nesciunt iste culpa deserunt modi facere id officia. Maiores harum velit dolorem
+                quisquam.</p>
+            <button class="order-now">Order Now</button>
+            <div class="icons">
+                <img src="./image/facebook.png" class="facebook" height="30px" width="25px">
+                <img src="./image/instagram.png" class="instagram" alt="Instagram" height="25px">
+                <img src="./image/twitter.png" class="twitter" alt="Twitter" height="25px">
+            </div>
+        </div>
+
+        <div class="drink">
+            <img src="./image/drinks.png" alt="Drinks" height="500px">
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
